[package]
name = "rust-unit-macros"
version = "0.1.0"
authors = ["Francisco Mendes <francisco.a.mendes.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.74"
quote = "1.0.9"

[dependencies.darling]
version = "0.13.0"
features = ["diagnostics"]